hphp/hack/test/typecheck/expression_trees/splice_err2.php.exp
File "splice_err2.php", line 9, characters 23-27:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 237, characters 26-35:
  Expected `ExampleInt`
  File "expr_tree.hhi", line 40, characters 40-52:
  But got `ExampleString`
  File "expr_tree.hhi", line 211, characters 44-49:
    via this generic `TInfer`
